# eigenface-embedding

./: .gitignore  README.md  pyproject.toml
exper/: eigenface.ipynb  normalize_embedding.ipynb  prepare_data.ipynb  train_nn_embedding_model.ipynb
src/: dataset.py  distance.py
src/eigenface/: pca.py
