[project]
name = "eigenface-embedding"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kevinchueh", email = "slime21023@gmail.com"},
]
dependencies = [
    "h5py>=3.10.0",
    "torch>=2.2.1",
    "skl2onnx>=1.16.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
